<resources>
    <string name="app_name">Zen Body Gym</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="belum_jadi_membership">Belum Jadi Membership ?</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="pakai">Pakai</string>
    <string name="daftar_membership">Daftar Membership</string>
    <string name="daftar_member">Daftar Member</string>
    <string name="nama">Nama</string>
    <string name="no_telepon">No Telepon</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="profil">Profil</string>

    <string name="zen_body_gym">Zen Body Gym</string>
    <string name="nomor_id">Nomor ID</string>
    <string name="alamat_gym">Jl. Jatiwangi - Majalengka, Cigasong, Kabupaten Majalengka, Jawa Barat 45476</string>
    <string name="pakai_personal_trainer">Pakai Personal Trainer</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="upload_foto_sekarang">Upload Foto Sekarang</string>
    <string name="upload_foto_nanti">Upload Foto Nanti</string>
    <string name="total_tagihan">Total Tagihan</string>
    <string name="upload_bukti_transfer">Upload Bukti Transfer</string>
    <string name="perpanjang">Perpanjang</string>
    <string name="batal">Batal</string>
    <string name="absen_member">Absen Member</string>
    <string name="lupa_akun">Lupa Akun</string>
    <string name="kartu_membership">Kartu Membership</string>
    <string name="personal_trainer">Personal Trainer</string>
    <string name="bayar_nanti">Bayar Nanti</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="jadwal_privet_selanjutnya">Jadwal Privet Selanjutnya</string>
    <string name="membership_berlaku_sampai">Membership Berlaku Sampai</string>
    <string name="kartu_member">Kartu Member</string>
    <string name="jadwal_latihan">Jadwal Latihan</string>
    <string name="kontak_personal_trainer">Kontak Personal Trainer</string>
    <string name="perpanjang_member">Perpanjang Member</string>
    <string name="keluar">Keluar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="jika_tidak_pakai_jangan_diisi">(Jika tidak pakai jangan diisi)</string>
    <string name="no_rekening">No Rekening</string>
    <string name="atas_nama">Atas Nama</string>
    <string name="keterangan"><b>Keterangan</b></string>
    <string name="pertemuan_1">Pertemuan 1</string>
    <string name="minggu_1">Minggu 1</string>
    <string name="minggu_2">Minggu 2</string>
    <string name="minggu_3">Minggu 3</string>
    <string name="perpanjang_personal_trainer">Perpanjang Personal Trainer</string>
    <string name="voucher">Voucher</string>
    <string name="use">Gunakan</string>
    <string name="chose">Pilih</string>
    <string name="code_voucher">Kode Voucher</string>
    <string name="code_voucher_holder">Masukan kode voucher</string>
    <string name="term_of_use">Syarat &amp; Ketentuan</string>
    <string name="please_wait">Mohon tunggu ...</string>
    <string name="use_voucher">Makin hemat pakai voucher</string>
    <string name="progress">Perkembangan</string>
    <string name="member_exist">Member anda masih tersisa %d hari</string>
    <string name="member_expired">Member anda telah habis, silahkan melakukan perpanjangan terlebih dahulu</string>
    <string name="schedule_exist">Anda masih memeliki jadwal atau jadwal belum dikonfirmasi selesai oleh PT.\nSilahkan selesaikan jadwal atau hubungi PT terlrbih dahulu.</string>
</resources>