<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:background="@color/bg">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_backv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mregular"
            android:paddingRight="24dp"
            android:text="@string/voucher"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_voucher"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="5dp">

    </TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp">

        <EditText
            android:id="@+id/txtVoucher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:padding="10dp"
            android:inputType="text|textCapCharacters"
            android:paddingEnd="65dp" />

        <Button
            android:id="@+id/btncheckvoucher"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/bg_btn"
            android:padding="0dp"
            android:text="@string/chose"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term_of_use"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="5dp">

    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <TextView
            android:id="@+id/txttos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:padding="5dp"
            tools:text="@tools:sample/lorem[200]"/>

    </ScrollView>

    <Button
        android:id="@+id/btnUseVoucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_btn"
        android:text="@string/use"
        android:textColor="@color/white"
        android:enabled="false"/>

</LinearLayout>