<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/bg_splash"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mlight"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input_log"
            android:fontFamily="@font/mmedium"
            android:inputType="text"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="231dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_input_log"
            android:fontFamily="@font/mmedium"
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="16sp"
            android:paddingLeft="10dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="231dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">

        <Button
            android:id="@+id/btn_masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_orange"
            android:fontFamily="@font/mmedium"
            android:text="Masuk"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mlight"
        android:text="@string/belum_jadi_membership"
        android:textColor="@color/white"
        android:textSize="12sp" />

        <Button
            android:id="@+id/btn_daf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/mlight"
            android:text="@string/daftar_disini"
            android:textStyle="bold"
            android:background="@color/bg"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>